--- a/EXTRACT_doctor_prompt/extraction.ipynb
+++ b/EXTRACT_doctor_prompt/extraction.ipynb
@@ -72,6 +72,110 @@
     "\n",
     "display(graph)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exporter.export(guiding_wfa,\"./\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.synchronic_model_guided_language_model import SyncronicModelGuidedLanguageModel\n",
+    "\n",
+    "property_model = get_man_woman_wfa(wrapper_with_prefix_space.terminal_symbol)\n",
+    "syncrhronic_model_with_prefix_space = SyncronicModelGuidedLanguageModel(wrapper_with_prefix_space, property_model, model_name=\"GUIDED_GPT2\", max_seq_length=10,normalize_outputs=True, top_k=2)\n",
+    "syncrhronic_model_without_prefix_space = SyncronicModelGuidedLanguageModel(wrapper_without_prefix_space, property_model, model_name=\"GUIDED_GPT2\", max_seq_length=10,normalize_outputs=True, top_k=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymodelextractor.teachers.pac_probabilistic_teacher import PACProbabilisticTeacher\n",
+    "from src.hypothesis_aware_sample_probabilistic_teacher import HypothesisAwareSampleProbabilisticTeacher\n",
+    "from pymodelextractor.learners.observation_tree_learners.bounded_pdfa_quantization_n_ary_tree_learner import BoundedPDFAQuantizationNAryTreeLearner\n",
+    "from pythautomata.utilities.probability_partitioner import TopKProbabilityPartitioner, QuantizationProbabilityPartitioner, RankingPartitioner\n",
+    "from pythautomata.model_comparators.wfa_partition_comparison_strategy import WFAPartitionComparator\n",
+    "from pythautomata.utilities.uniform_word_sequence_generator import UniformWordSequenceGenerator\n",
+    "\n",
+    "\n",
+    "partitioner = QuantizationProbabilityPartitioner(100000)\n",
+    "comparator = WFAPartitionComparator(partitioner)\n",
+    "epsilon = 0.1\n",
+    "delta = epsilon\n",
+    "sequence_generator = guiding_generator\n",
+    "max_states = 30\n",
+    "max_query_length = 100\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teacher_with_prefix_space = HypothesisAwareSampleProbabilisticTeacher(syncrhronic_model_with_prefix_space, comparator, 30)\n",
+    "teacher_without_prefix_space = HypothesisAwareSampleProbabilisticTeacher(syncrhronic_model_without_prefix_space, comparator, 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learner = BoundedPDFAQuantizationNAryTreeLearner(partitioner, \n",
+    "                                                 max_states, \n",
+    "                                                 max_query_length, \n",
+    "                                                 None, \n",
+    "                                                 generate_partial_hipothesis = True, \n",
+    "                                                 pre_cache_queries_for_building_hipothesis = True,  \n",
+    "                                                 check_probabilistic_hipothesis = False, \n",
+    "                                                 omit_zero_transitions=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_result_with_prefix_space = learner.learn(teacher_with_prefix_space)\n",
+    "learning_result_without_prefix_space = learner.learn(teacher_without_prefix_space)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pythautomata.model_exporters.dot_exporters.wfa_dot_exporting_strategy import WFADotExportingStrategy\n",
+    "from IPython.display import display\n",
+    "exporter = WFADotExportingStrategy()\n",
+    "graph1 = exporter.create_graph(learning_result_with_prefix_space.model)\n",
+    "display(graph1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph2 = exporter.create_graph(learning_result_without_prefix_space.model)\n",
+    "display(graph2)"
+   ]
   }
  ],
  "metadata": {
