extraction engineer finished

--- a/EXTRACT_engineer/extraction.ipynb
+++ b/EXTRACT_engineer/extraction.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "from src.synchronic_model_guided_language_model import SynchronicModelGuidedLanguageModel\n",
     "\n",
-    "property_model = get_doctor_wfa(wrapper_with_prefix_space.terminal_symbol)\n",
+    "property_model = get_engineer_wfa(wrapper_with_prefix_space.terminal_symbol)\n",
     "syncrhronic_model_with_prefix_space = SynchronicModelGuidedLanguageModel(wrapper_with_prefix_space, property_model, model_name=\"GUIDED_GPT2\", max_seq_length=6,normalize_outputs=True, top_k = 2)\n",
     "syncrhronic_model_without_prefix_space = SynchronicModelGuidedLanguageModel(wrapper_without_prefix_space, property_model, model_name=\"GUIDED_GPT2\", max_seq_length=6,normalize_outputs=True, top_k = 2)"
    ]
