--- a/EXTRACT_teacher/extraction.ipynb
+++ b/EXTRACT_teacher/extraction.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "from gpt2.gpt2_probabilistic_model_wrapper import GPT2_probabilistic_model_wrapper\n",
-    "from guiding_wfa_engineer import alphabet\n",
+    "from guiding_wfa_teacher import alphabet\n",
     "wrapper_with_prefix_space = GPT2_probabilistic_model_wrapper(100, alphabet, device, model, tokenizer_with_prefix_space)\n",
     "wrapper_without_prefix_space = GPT2_probabilistic_model_wrapper(100, alphabet, device, model, tokenizer_without_prefix_space)\n"
    ]
@@ -42,9 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from guiding_wfa_engineer import get_engineer_wfa\n",
+    "from guiding_wfa_teacher import get_teacher_wfa\n",
     "from pythautomata.utilities.guiding_wfa_sequence_generator import GuidingWDFASequenceGenerator\n",
-    "guiding_wfa = get_engineer_wfa(wrapper_with_prefix_space.terminal_symbol)\n",
+    "guiding_wfa = get_teacher_wfa(wrapper_with_prefix_space.terminal_symbol)\n",
     "guiding_generator = GuidingWDFASequenceGenerator(guiding_wfa, None)\n",
     "guiding_generator.generate_words(7)"
    ]
@@ -81,7 +81,7 @@
    "source": [
     "from src.synchronic_model_guided_language_model import SynchronicModelGuidedLanguageModel\n",
     "\n",
-    "property_model = get_engineer_wfa(wrapper_with_prefix_space.terminal_symbol)\n",
+    "property_model = get_teacher_wfa(wrapper_with_prefix_space.terminal_symbol)\n",
     "syncrhronic_model_with_prefix_space = SynchronicModelGuidedLanguageModel(wrapper_with_prefix_space, property_model, model_name=\"GUIDED_GPT2\", max_seq_length=6,normalize_outputs=True, top_k = 2)\n",
     "syncrhronic_model_without_prefix_space = SynchronicModelGuidedLanguageModel(wrapper_without_prefix_space, property_model, model_name=\"GUIDED_GPT2\", max_seq_length=6,normalize_outputs=True, top_k = 2)"
    ]
@@ -100,7 +100,7 @@
     "from pythautomata.utilities.uniform_word_sequence_generator import UniformWordSequenceGenerator\n",
     "\n",
     "\n",
-    "partitioner = QuantizationProbabilityPartitioner(2)\n",
+    "partitioner = QuantizationProbabilityPartitioner(10)\n",
     "comparator = WFAPartitionComparator(partitioner)\n",
     "epsilon = 0.1\n",
     "delta = epsilon\n",
@@ -206,22 +206,8 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "name": "python"
   }
  },
  "nbformat": 4,
